--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
 @charset "utf-8";
+
+* {
+  outline: 0;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #ffcaec;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
